# CMakeList.txt : projet CMake pour NetPong Project, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("NetPong Project")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (CMakeTarget "NetPong Project.cpp" "NetPong Project.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
